--- a/sasundul-portfolio/index.html
+++ b/sasundul-portfolio/index.html
@@ -6,6 +6,8 @@
     <title>| Sasundul Wanasinghe |</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="description" content="Portfolio of Sasundul Wanasinghe, a Full Stack Developer." />
+    <meta property="og:title" content="Sasundul Wanasinghe" />
+<meta property="og:site_name" content="sasudul.xyz" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
