--- a/sasundul-portfolio/index.html
+++ b/sasundul-portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>| Sasundul Wanasinghe |</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="description" content="Portfolio of Sasundul Wanasinghe, a Full Stack Developer." />
+    <meta name="description" content="Sasundul Wanasinghe is a Full Stack Developer specializing in modern web applications, scalable backend systems, and intuitive user experiences." />
     <meta property="og:title" content="Sasundul Wanasinghe" />
 <meta property="og:site_name" content="sasudul.xyz" />
     <script src="https://cdn.tailwindcss.com"></script>
